--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="footer-copyright">&copy; 2020 PSCouchDB, all rights reserved</div>
+					<div class="footer-copyright">&copy; 2020 Matteo Guadrini, all rights reserved</div>
 				</div>
 			</div>
         </footer>
